--- a/libtiff/libtiff/libtiff.vcxproj.filters
+++ b/libtiff/libtiff/libtiff.vcxproj.filters
@@ -107,9 +107,6 @@
     <ClCompile Include="src\tif_lzw.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\tif_msdos.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\tif_next.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -161,6 +158,9 @@
     <ClCompile Include="src\tif_zip.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\tif_lzma.c" />
+    <ClCompile Include="src\tif_jpeg_12.c" />
+    <ClCompile Include="src\mkg3states.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="include\tiffconf.h.in">
