--- a/libwebp/libwebp.vcxproj
+++ b/libwebp/libwebp.vcxproj
@@ -240,6 +240,7 @@
     <ClCompile Include="src\utils\quant_levels_utils.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="src\dec\alphai_dec.h" />
     <ClInclude Include="src\dec\common_dec.h" />
     <ClInclude Include="src\dec\vp8_dec.h" />
@@ -274,6 +275,9 @@
     <ClInclude Include="src\utils\bit_writer_utils.h" />
     <ClInclude Include="src\utils\huffman_encode_utils.h" />
     <ClInclude Include="src\utils\quant_levels_utils.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="libwebp-060.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
