update README.md and props.

--- a/liblept/leptonica.vcxproj
+++ b/liblept/leptonica.vcxproj
@@ -666,6 +666,9 @@
   <ItemGroup>
     <ResourceCompile Include="liblept.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
