--- a/leptonica_versionnumbers.props
+++ b/leptonica_versionnumbers.props
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Label="UserMacros">
-    <GIFLIB_VERSION>416</GIFLIB_VERSION>
-    <LIBJPEG_VERSION>8c</LIBJPEG_VERSION>
-    <LIBLEPT_VERSION>171</LIBLEPT_VERSION>
-    <LIBLEPT_VERSION_R>1,71,0,0</LIBLEPT_VERSION_R>
-    <LIBLEPT_NUMBER>1.71</LIBLEPT_NUMBER>
-    <LIBPNG_VERSION>143</LIBPNG_VERSION>
-    <LIBTIFF_VERSION>394</LIBTIFF_VERSION>
-    <ZLIB_VERSION>128</ZLIB_VERSION>
+    <GIFLIB_VERSION>5.1.4</GIFLIB_VERSION>
+    <LIBJPEG_VERSION>9b</LIBJPEG_VERSION>
+    <LIBLEPT_VERSION>1.74.1</LIBLEPT_VERSION>
+    <LIBLEPT_VERSION_R>1,74,1,0</LIBLEPT_VERSION_R>
+    <LIBLEPT_NUMBER>1.74.1</LIBLEPT_NUMBER>
+    <LIBPNG_VERSION>1.6.19</LIBPNG_VERSION>
+    <LIBTIFF_VERSION>4.0.7</LIBTIFF_VERSION>
+    <ZLIB_VERSION>1.2.11</ZLIB_VERSION>
   </PropertyGroup>
   <PropertyGroup>
     <_ProjectFileVersion>11.0.60610.1</_ProjectFileVersion>
